# boggle-paper

./: README.md  make-pdf.sh  pyproject.toml
paper/: boggle.typ  code.typ  content.typ  orderly.dot  paper.typ  paper.typst  references.bib  tree-only-bound.dot  tree-with-bound.dot  tree.dot
src/: constants.py  sum_choice_tree.py  trie.py  util.py
src/boggle_paper/: __init__.py
src/listings/: add_word.py  find_words.py  force.py  max_refactor.py  max_tree.py  maxbound.py  merge.py  orderly.py  orderly_bound.py  sumbound.py
test/: add_word_test.py  find_words_test.py  force_test.py  max_refactor_test.py  max_tree_test.py  maxbound_test.py  merge_test.py  orderly_bound_test.py  orderly_test.py  sumbound_test.py  util.py
