[project]
name = "boggle-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dan Vanderkam", email = "danvdk@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
boggle-paper = "boggle_paper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
